.bundle instead maybe

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> <meta charset="utf-8" /> <title>talkwerk</title>
 <head>
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <script defer src="./bundle.js"></script>
+  <script defer src="/bundle.js"></script>
 </head>
 
 <h1 class="center" id="headline">talkwerk</h1>
