--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <meta charset="utf-8" /> <title>talkwerk</title>
+<!DOCTYPE html> <meta charset="utf-8" /> <title>talkwords</title>
 <head>
   <link rel="stylesheet" type="text/css" href="style.css" />
   <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet" />
